--- a/css/global.css
+++ b/css/global.css
@@ -62,9 +62,10 @@
 
 .contenido-seccion1 {
 	position: relative;
+	display: block;
 	width: 100%;
-	height: 400px;
-	margin: auto;
+	height: 600px;
+	margin: 50px auto;
 }
 .contenido-seccion1 .img-gradiente {
 	display: block;
@@ -74,8 +75,21 @@
 	width: 100%;
 	height: 100%;	
 	background: #009fff;
-	background-image: linear-gradient(to right, rgba(236,47,75,0.60), rgba(0,157,255,0.60)), url(../images/myslider/img-2.jpg);
+	background-image: linear-gradient(to right, rgba(236,47,75,0.60), rgba(0,157,255,0.60)), url(../images/myslider/foto03.jpg);
     	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
+}
+
+.img-gradiente h2 {
+	position: absolute;
+	font-size: 48px;
+	top: 25%;
+	left: 50%;
+	transform: translate(-50%);
+/*    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;*/
+	color: white;
 }
