--- a/css/contacto.css
+++ b/css/contacto.css
@@ -134,3 +134,27 @@
 		text-align: left;
 	}
 }
+
+/*----------------------------------------------------------------*/
+/*----------------------------------------------------------------*/
+/*-----------------------------GRACIAS----------------------------*/
+.cls-gracias {
+	width: 100%;
+	height: 100vh;
+	background-image: url(../images/myslider/img-1.jpg);
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: cover;
+	object-fit: cover;
+}
+
+.cls-gracias h1 {
+	color: white;
+	text-align: center;
+	font-size: 50px;
+	padding: 20px;
+	background: rgba(0,0,0,0.5);
+	border-radius: 10px;
+	padding-top: 150px;
+}
+/*----------------------------------------------------------------*/
